care/force-app/main/default/objects/PPL_Sales_Goal__c/PPL_Sales_Goal__c.object-meta.xml
<CustomObject>
    <description>Created for the Marketing Solutions Sales team. SFORCE-4708</description>
    <label>PPL Sales Goal</label>
    <nameField>
        <label>PPL Sales Goals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPL Sales Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>