care/force-app/main/default/objects/PPL_Sales_Goal__c/fields/Assignee_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PPL_Sales_Goals5</relationshipName>
    <type>Lookup</type>
</CustomField>