care/force-app/main/default/objects/PPL_Sales_Goal__c/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PPL_Sales_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>