care/force-app/main/default/objects/PPL_Sales_Goal__c/fields/Pay_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period_End__c</fullName>
    <formula>Pay_Period_Start__c + 13</formula>
    <inlineHelpText>Pay Period Start + 13 days</inlineHelpText>
    <label>Pay Period End</label>
    <type>Date</type>
</CustomField>