care/force-app/main/default/objects/PPL_Sales_Goal__c/fields/Pay_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period_Start__c</fullName>
    <label>Pay Period Start</label>
    <type>Date</type>
</CustomField>