care/force-app/main/default/objects/PPL_Sales_Goal__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName + &quot;: &quot; +
TEXT(MONTH(Pay_Period_Start__c)) &amp; &quot;/&quot; &amp; 
TEXT(DAY(Pay_Period_Start__c)) &amp; &quot;/&quot; &amp; 
TEXT(YEAR(Pay_Period_Start__c)) &amp; &quot;-&quot; &amp; 
TEXT(MONTH(Pay_Period_End__c)) &amp; &quot;/&quot; &amp;
TEXT(DAY(Pay_Period_End__c)) &amp; &quot;/&quot; &amp;
TEXT(YEAR(Pay_Period_End__c))</formula>
    <label>Practice</label>
    <type>Text</type>
</CustomField>