care/force-app/main/default/objects/PPL_Sales_Goal__c/fields/Sells_Childcare__c.field-meta.xml
<CustomField>
    <fullName>Sells_Childcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sells Childcare?</label>
    <type>Checkbox</type>
</CustomField>