care/force-app/main/default/objects/PPL_Sales_Goal__c/fields/Sells_Sr_Care__c.field-meta.xml
<CustomField>
    <fullName>Sells_Sr_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sells Sr Care?</label>
    <type>Checkbox</type>
</CustomField>