care/force-app/main/default/objects/PPL_Sales_Goal__c/fields/Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>Transition_Date__c</fullName>
    <inlineHelpText>When the Sales rep moves from trainee to rep.</inlineHelpText>
    <label>Transition Date</label>
    <type>Date</type>
</CustomField>