care/force-app/main/default/objects/PPL_Sales_Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sells_Childcare__c</columns>
    <columns>Sells_Sr_Care__c</columns>
    <columns>Pay_Period_Start__c</columns>
    <columns>Transition_Date__c</columns>
    <columns>Pay_Period_End__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>