care/force-app/main/default/objects/PPL_Sales_Goal__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Assignee__c</columns>
    <columns>Assignee_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sells_Childcare__c</columns>
    <columns>Sells_Sr_Care__c</columns>
    <columns>Pay_Period_Start__c</columns>
    <columns>Transition_Date__c</columns>
    <columns>Pay_Period_End__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>